implentação crud quarto

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,3 +11,15 @@
 0108=Quantidade de estrelas de ser entre 1 e 5.
 0109=Nome do hotel é obrigatório, preencha este campo.
 0110=Endereço do Hotel é obrigatório, preencha este campo.
+
+0201=Quarto cadastro com sucesso.
+0202=Erro ao tentar cadastrar Hotel.
+0203=Quarto atualizado com sucesso.
+0204=Erro ao tentar atualizar Quarto.
+0205=Hotel excluído com sucesso.
+0206=Erro ao tentar excluir Quarto.
+0207=Busca não retorno nenhum registro de Quarto.
+0209=Número do quarto é obrigatório, preencha este campo.
+0210=Quantidade de leitos é obrigatório, preencha este campo.
+0211=Preço da diária é obrigatório, preencha este campo.
+0212=Categoria de Quarto é obrigatório, preencha este campo.
